...
    android:paddingTop="@dimen/activity_vertical_margin"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="ubusetas.ubu.adrian.proyectoubusetas.clasificador.RecogerFoto"
    tools:showIn="@layout/layout_recoger_foto">

    <TextView
        android:id="@+id/TextView_elegir_opcion"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/texto_elegir_opcion"
        android:textAlignment="center"
        android:textColor="@color/black" />

    <LinearLayout
        android:id="@+id/LinearLayout_botones_recoger_foto"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/TextView_elegir_opcion"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="@dimen/activity_vertical_margin"
        android:orientation="horizontal">

        <android.support.design.widget.FloatingActionButton
            android:id="@+id/boton_galeria"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:drawableLeft="@android:drawable/ic_menu_gallery"
            app:srcCompat="@android:drawable/ic_menu_gallery" />

        <android.support.design.widget.FloatingActionButton
            android:id="@+id/boton_hacer_foto"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:drawableLeft="@android:drawable/ic_menu_camera"
            app:srcCompat="@android:drawable/ic_menu_camera" />

...
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            app:srcCompat="@android:drawable/ic_menu_search" />
    </LinearLayout>

    <TextView
        android:id="@+id/TextView_imagen_mostrada"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/LinearLayout_botones_recoger_foto"
        android:layout_marginTop="70dp"
        android:text="@string/texto_mostrar_imagen"
        android:textAlignment="center"
        android:textColor="@color/black" />

    <ImageView
        android:id="@+id/imageView_mostrar_imagen"
        android:layout_width="200dp"
        android:layout_height="200dp"
        android:layout_below="@id/TextView_imagen_mostrada"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:layout_marginTop="@dimen/activity_vertical_margin"
...
